registryui-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registryui-app
  labels:
    app: registry-ui
    tier: web
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: web
  template:
    metadata:
      labels:
        app: registry-ui
        tier: web
    spec:
      containers:
        - name: registry-ui
          image: "pi4apps:5000/registry-ui:1.2.0"
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "384Mi"
              cpu: "250m" # 1/4 CPU
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            timeoutSeconds: 60
          #          initialDelaySeconds: 60
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            timeoutSeconds: 3
            initialDelaySeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: registryui-service
spec:
  selector:
    app: registry-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registryui-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: registry-ui.cloud.lavacro.net
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: registryui-service
            port:
              number: 80
